# chopsticks

./: Cargo.toml  LICENSE  README.md
src/: event.rs  lib.rs  main.rs
src/tui/: mod.rs  model.rs  update.rs  view.rs
