[package]
name = "chopsticks"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
ratatui = "0.26.2"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0.198", features = ["derive"] }
toml = "0.8.12"
run_script = "0.10.1"
tui-textarea = "0.4.0"
fuzzy-matcher = "0.3.7"
dirs = "5.0.1"
arboard = "3.4.0"

[profile.release]
lto = true
